# spider_tauri

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: tauri.yml
src/: App.vue  index.css  main.ts  mod.d.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs  spider.rs
src/components/: Greet.vue
src/views/: About.vue  Fail.vue  Home.vue
