[package]
name = "spider_tauri"
version = "1.1.0"
description = "A Tauri App"
authors = ["Jiahao Xiang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.1"
reqwest = "0.12.5"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
simplelog = "0.11.0"
dirs = "4.0"
lazy_static = "1.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
